  because it determines when a pattern match's effects run and is an input
  into the fast path for function application.

  This change affects tooling: it changes the function constructs in parsetree
  and typedtree.

  See https://github.com/ocaml/RFCs/pull/32 for the original RFC.

  (Nick Roberts; review by Richard Eisenberg, Leo White, and Gabriel Scherer;
  RFC by Stephen Dolan)

### Build system:

- #12198: continue the merge of the sub-makefiles into the root Makefile
  started with #11243, #11248, #11268, #11420 and #11675.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)

### Bug fixes:

- #11931: Fix tricky typing bug with type substitutions
  (Stephen Dolan, review by Leo White and Jacques Garrigue)

- #12037: get_extern_state potential NULL dereference.
  (Alexander Skvortsov, report by Török Edwin,
   design by Gabriel Scherer, Xavier Leroy)

- #12032, #12059: Bug fixes related to compilation of recursive definitions
  (Vincent Laviron, report by Victoire Noizet, review by Gabriel Scherer)

* #12145: Loopy constraints cause ocamlc to loop.
  Fixed by completely removing the call to `update_type` in
  `Typedecl.transl_type_decl`, as the expansion is already checked by
  `check_regularity`. As a result, recursion is more polymorphic,
  which may cause some (essentialy wrong) type declarations to have
  unbound type variables, and some constraints unrelated to the concrete
  type to be ignored (see tests/typing-misc/constraints.ml).
  (Jacques Garrigue, report by Richard Eisenberg, review by Leo White)

- #12207, #12222: Make closure computation linear in the number of recursive
  functions instead of quadratic
  (Vincent Laviron, report by François Pottier, review by Nathanaëlle Courant
  and Gabriel Scherer)

- #12334, #12368: Bad error message with mutually recursive abbreviations
  (Jacques Garrigue, report by Richard Eisenberg, review by Gabriel Scherer
   and Richard Eisenberg)
